--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 	text-align: center;
 	height: 100%;
 	width: 100%;
+	overflow-y: auto;
 }
 
 .App-logo {
@@ -33,6 +34,54 @@
 	color: #61dafb;
 }
 
+.flippy-back {
+	--c: #0e685e;
+    --nlist: #77dddd, #1e766a;
+	--rlist: var(--c) 0 3px, transparent 0 7px;
+    --dim: 100% 50% no-repeat;
+    --ang: 90deg;
+    border-radius: 7px;
+    box-shadow: 2px 2px 17px #000;
+    background: repeating-linear-gradient(var(--ang-0, -45deg), var(--rlist)) var(--pos-0, 0 0)/var(--dim), repeating-linear-gradient(var(--ang-1, 45deg), var(--rlist)) var(--pos-1, 0 100%)/var(--dim), linear-gradient(var(--ang), var(--nlist));
+}
+
+.v {
+	--dim: 50% no-repeat;
+	--ang: 0deg;
+	--pos-1: 100%;
+}
+
+.flippy-front {
+	background-color: rgb(250, 250, 239);
+}
+
+.card {
+	display: inline-block !important;
+	min-height: 80%;
+	min-width: 80%;
+	justify-content: center;
+	align-items: center;
+	background: beige;
+	border: 1px solid #ccc;
+	transition:1.1s ease-out;
+	box-shadow: -2rem 2rem 2rem rgba(0,0,0,0.2);
+	filter:blur(0);
+	transform: scale(1);
+	opacity: 1;
+	visibility: visible;
+	margin-bottom: 2em;
+	margin-top: 2em;
+	list-style-position: inside;
+}
+
+.card.off {
+	opacity: 0;
+	visibility: hidden;
+	filter: blur(8px);
+	transform: scale(0.33);
+	box-shadow: 1rem, 0 0 rgba(0,0,0,0.2);
+}
+
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
@@ -43,7 +92,7 @@
 }
 
 .Map {
-	margin-top: 8em;
+	margin-top: 2em;
 }
 
 .Menu{
