--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+a {
+	color: #839cb9
+}
 
 .App {
 	
@@ -34,9 +37,14 @@
 	color: #61dafb;
 }
 
+.congress {
+	list-style:square;
+	list-style-position: inside;
+}
+
 .flippy-back {
-	--c: #0e685e;
-    --nlist: #77dddd, #1e766a;
+	--c: #314e6e;
+    --nlist: #aec1d6, #4f81b9;
 	--rlist: var(--c) 0 3px, transparent 0 7px;
     --dim: 100% 50% no-repeat;
     --ang: 90deg;
@@ -52,7 +60,7 @@
 }
 
 .flippy-front {
-	background-color: rgb(250, 250, 239);
+	background-color: rgb(236, 236, 234);
 }
 
 .card {
@@ -61,7 +69,7 @@
 	min-width: 80%;
 	justify-content: center;
 	align-items: center;
-	background: beige;
+	background: rgb(236, 236, 234);
 	border: 1px solid #ccc;
 	transition:1.1s ease-out;
 	box-shadow: -2rem 2rem 2rem rgba(0,0,0,0.2);
@@ -80,6 +88,10 @@
 	filter: blur(8px);
 	transform: scale(0.33);
 	box-shadow: 1rem, 0 0 rgba(0,0,0,0.2);
+}
+
+h3 {
+	color:#b9838a
 }
 
 @keyframes App-logo-spin {
@@ -162,3 +174,11 @@ path:hover {
 	cursor: pointer;
 }
 
+.sportArea {
+	margin: 20px 300px;
+}
+
+.teamArea {
+	padding: 20px;
+	
+}
