--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,10 @@ a {
     background: repeating-linear-gradient(var(--ang-0, -45deg), var(--rlist)) var(--pos-0, 0 0)/var(--dim), repeating-linear-gradient(var(--ang-1, 45deg), var(--rlist)) var(--pos-1, 0 100%)/var(--dim), linear-gradient(var(--ang), var(--nlist));
 }
 
+.capitalBackSide {
+	background: rgb(236, 236, 234);
+}
+
 .v {
 	--dim: 50% no-repeat;
 	--ang: 0deg;
@@ -80,6 +84,31 @@ a {
 	margin-bottom: 2em;
 	margin-top: 2em;
 	list-style-position: inside;
+}
+
+.capitalCard {
+	display: inline-block !important;
+	height: 40em;
+	min-width: 100%;
+	justify-content: center;
+	align-items: center;
+	background: rgb(236, 236, 234);
+	border: 1px solid #ccc;
+	transition:1.1s ease-out;
+	box-shadow: -2rem 2rem 2rem rgba(0,0,0,0.2);
+	filter:blur(0);
+	transform: scale(1);
+	opacity: 1;
+	visibility: visible;
+	margin-bottom: 2em;
+	margin-top: 2em;
+}
+
+.capitalText {
+	margin-top: 4em;
+	font-family: 'Seymour One', sans-serif;
+	font-weight: bolder;
+	font-size: 4em;
 }
 
 .card.off {
