--- a/src/App.css
+++ b/src/App.css
@@ -1,240 +1,241 @@
 a {
-	color: #839cb9
+  color: #839cb9;
 }
 
 .App {
-	
-	position: fixed;
-	text-align: center;
-	height: 100%;
-	width: 100%;
-	overflow-y: auto;
-	overflow-x: auto;
+  position: fixed;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 .App-logo {
-	height: 40vmin;
-	pointer-events: none;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-	color: #61dafb;
+  color: #61dafb;
 }
 
 .congress {
-	list-style:square;
-	list-style-position: inside;
+  list-style: square;
+  list-style-position: inside;
 }
 
 .flippy-back {
-	background-image: linear-gradient(to top right, rgba(131, 156, 186, .2), rgba(131, 156, 186, 1));
-	
+  background-image: linear-gradient(
+    to top right,
+    rgba(131, 156, 186, 0.2),
+    rgba(131, 156, 186, 1)
+  );
 }
 
 .capitalBackSide {
-	background: rgb(236, 236, 234);
+  background: rgb(236, 236, 234);
 }
 
-
 .flippy-front {
-	background-color: rgb(236, 236, 234);
+  background-color: rgb(236, 236, 234);
 }
 
 .card {
-	display: inline-block !important;
-	min-height: 80%;
-	min-width: 80%;
-	justify-content: center;
-	align-items: center;
-	background: rgb(236, 236, 234);
-	border: 1px solid #ccc;
-	transition:1.1s ease-out;
-	box-shadow: -2rem 2rem 2rem rgba(0,0,0,0.2);
-	filter:blur(0);
-	transform: scale(1);
-	opacity: 1;
-	visibility: visible;
-	margin-bottom: 2em;
-	margin-top: 2em;
-	list-style-position: inside;
+  display: inline-block !important;
+  min-height: 80%;
+  min-width: 80%;
+  justify-content: center;
+  align-items: center;
+  background: rgb(236, 236, 234);
+  border: 1px solid #ccc;
+  transition: 1.1s ease-out;
+  box-shadow: -2rem 2rem 2rem rgba(0, 0, 0, 0.2);
+  filter: blur(0);
+  transform: scale(1);
+  opacity: 1;
+  visibility: visible;
+  margin-bottom: 2em;
+  margin-top: 2em;
+  list-style-position: inside;
 }
 
 .capitalCard {
-	display: inline-block !important;
-	height: 40em;
-	min-width: 100%;
-	justify-content: center;
-	align-items: center;
-	background: rgb(236, 236, 234);
-	border: 1px solid #ccc;
-	transition:1.1s ease-out;
-	box-shadow: -2rem 2rem 2rem rgba(0,0,0,0.2);
-	filter:blur(0);
-	transform: scale(1);
-	opacity: 1;
-	visibility: visible;
-	margin-bottom: 2em;
-	margin-top: 2em;
+  display: inline-block !important;
+  height: 40em;
+  min-width: 100%;
+  justify-content: center;
+  align-items: center;
+  background: rgb(236, 236, 234);
+  border: 1px solid #ccc;
+  transition: 1.1s ease-out;
+  box-shadow: -2rem 2rem 2rem rgba(0, 0, 0, 0.2);
+  filter: blur(0);
+  transform: scale(1);
+  opacity: 1;
+  visibility: visible;
+  margin-bottom: 2em;
+  margin-top: 2em;
 }
 
 .capitalText {
-	margin-top: 4em;
-	font-family: 'Seymour One', sans-serif;
-	font-weight: bolder;
-	font-size: 4em;
+  margin-top: 4em;
+  font-family: 'Seymour One', sans-serif;
+  font-weight: bolder;
+  font-size: 4em;
 }
 
 .card.off {
-	opacity: 0;
-	visibility: hidden;
-	filter: blur(8px);
-	transform: scale(0.33);
-	box-shadow: 1rem, 0 0 rgba(0,0,0,0.2);
+  opacity: 0;
+  visibility: hidden;
+  filter: blur(8px);
+  transform: scale(0.33);
+  box-shadow: 1rem, 0 0 rgba(0, 0, 0, 0.2);
 }
 
 .generalImg {
-	display: flex;
-	justify-content: space-evenly;
-	flex-flow:wrap
+  display: flex;
+  justify-content: space-evenly;
+  flex-flow: wrap;
 }
 
 h1 {
-	font-size: 50px;
+  font-size: 50px;
 }
 
 h3 {
-	color:#b9838a;
-	font-size: 35px;
+  color: #b9838a;
+  font-size: 35px;
 }
 
 h5 {
-	color: black;
+  color: black;
 }
 
 .happy {
-	color:#92234e;
+  color: #92234e;
 }
 
 img {
-	margin-bottom: 10px;
-	margin-top: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 @keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .Map {
-	margin-top: 2em;
+  margin-top: 2em;
 }
 
-.Menu{
-    position: relative;
-	padding: 20px;
+.Menu {
+  position: relative;
+  padding: 20px;
 }
 
-.m-item{
-    position: absolute;
-    top: 0;
-	height: 100%;
-    width: 5.5em;
-    background-color: #10375c;
-    box-shadow: 1px 2px 2px #175188;
-    padding: 0.2em;
-    border-radius: 1em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-	text-shadow: 1px 1px 1px black;
-    color: #EDFFEC;
-    cursor: pointer;
-    transition: 1s;
+.m-item {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 5.5em;
+  background-color: #10375c;
+  box-shadow: 1px 2px 2px #175188;
+  padding: 0.2em;
+  border-radius: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5em;
+  text-shadow: 1px 1px 1px black;
+  color: #edffec;
+  cursor: pointer;
+  transition: 1s;
 }
 
-.m-item:hover{
-    border: 2px solid black;
+.m-item:hover {
+  border: 2px solid black;
 }
 
-.m-logo{
-    z-index: 5;
+.m-logo {
+  z-index: 5;
 }
 
 .Nav {
-	display: flex;
-	width: 100%;
-	height: 50px;
-	justify-content: center;
-	margin-top: 10px;
+  display: flex;
+  width: 100%;
+  height: 50px;
+  justify-content: center;
+  margin-top: 10px;
 }
 
-.open-1{
-    top: 1.8em;
-    background-color: #900c3f;
-	z-index: 4;
+.open-1 {
+  top: 1.8em;
+  background-color: #900c3f;
+  z-index: 4;
 }
-.open-2{
-    top: 3.6em;
-    background-color: #cea719;
-	z-index:3;
+.open-2 {
+  top: 3.6em;
+  background-color: #cea719;
+  z-index: 3;
 }
-.open-3{
-    top: 5.4em;
-    background-color: #127681;
-	z-index:2;
+.open-3 {
+  top: 5.4em;
+  background-color: #127681;
+  z-index: 2;
 }
 
-.open-4{
-	top: 7.2em;
-	background-color: #654062;
-	z-index:1;
+.open-4 {
+  top: 7.2em;
+  background-color: #654062;
+  z-index: 1;
 }
 
 path {
-	pointer-events: all;
+  pointer-events: all;
 }
 
 path:hover {
-	opacity: 0.5;
-	cursor: pointer;
+  opacity: 0.5;
+  cursor: pointer;
 }
 
 path:active {
-	opacity:0.5;
+  opacity: 0.5;
 }
 
 .sportArea {
-	margin: 20px 300px;
+  margin: 20px 300px;
 }
 
 .teamArea {
-	padding: 20px;	
+  padding: 20px;
 }
 
 ul {
-	display: inline-block;
-	text-align: left;
-	padding: 0;
+  display: inline-block;
+  text-align: left;
+  padding: 0;
 }
